# scenic

./: .gitignore  pyproject.toml  slurm_job_gpu.sh
scenic/common_lib/: debug_utils.py
scenic/dataset_lib/: cityscapes_dataset.py  dataset_utils.py  datasets.py  imagenet_dataset.py  oxford_pets_dataset.py  video_ops.py
scenic/dataset_lib/big_transfer/: registry.py
scenic/dataset_lib/big_transfer/preprocessing/: autoaugment.py  ops.py
scenic/dataset_lib/coco_dataset/: coco_eval.py  coco_utils.py
scenic/model_lib/: models.py
scenic/model_lib/base_models/: box_utils.py  classification_model.py  encoder_decoder_model.py  model_utils.py  multilabel_classification_model.py  regression_model.py  segmentation_model.py
scenic/model_lib/base_models/tests/: test_box_utils.py
scenic/model_lib/layers/: attention_layers.py  masked_layers.py  nn_layers.py  nn_ops.py
scenic/model_lib/matchers/: common.py  hungarian_cover.py  sinkhorn.py
scenic/model_lib/matchers/tests/: test_matchers.py
scenic/model_lib/tests/: test_models.py
scenic/projects/baselines/: bit_resnet.py  resnet.py  vit.py
scenic/projects/baselines/bert/: bert_base_model.py  layers.py  model.py  train_utils.py
scenic/projects/baselines/bert/datasets/: bert_glue_dataset.py
scenic/projects/baselines/clip/: model.py  tokenizer.py
