[tool]
[tool.poetry]
name = "scenic"
version = "0.0.1"
description = "A Jax Library for Computer Vision Research and Beyond."
license = "Apache 2.0"
keywords = ["Scenic"]
classifiers = ["Development Status :: 1 - Beta", "Intended Audience :: Developers", "Intended Audience :: Science/Research", "License :: OSI Approved :: Apache Software License", "Programming Language :: Python", "Topic :: Scientific/Engineering :: Artificial Intelligence"]
homepage = "http://github.com/google-research/scenic"
authors = ["Scenic Authors <no-reply@google.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
absl-py = ">=1.0.0"
clu = ">=0.0.6"
dmvr = {git = "https://github.com/deepmind/dmvr.git", optional = true}
flax = ">=0.4.0"
immutabledict = ">=2.2.1"
jax = ">=0.2.21"
jaxlib = ">=0.1.74"
lingvo = {version = "==0.11.0", optional = true}
ml-collections = ">=0.1.1"
numpy = ">=1.12"
ott-jax = {version = ">=0.2.0", optional = true}
pytest = {optional = true, version = "*"}
seaborn = {version = ">=0.11.2", optional = true}
shapely = {optional = true, version = "*"}
sklearn = {optional = true, version = "*"}
tensorflow = ">=2.7"
tensorflow-addons = ">=0.15.0"
tensorflow-datasets = "*"
tf-models-official = "*"
tf-nightly = "==2.9.0.dev20220401"

[tool.poetry.extras]
testing = ["dmvr", "lingvo", "ott-jax", "pytest", "seaborn", "shapely", "sklearn"]
